--- a/app/assets/stylesheets/modules/_course.styl
+++ b/app/assets/stylesheets/modules/_course.styl
@@ -244,3 +244,7 @@ rating(color)
             input
               width 200px
               margin-bottom 10px
+
+@media only screen and (min-width: 919px) and (max-width: 986px)
+  .campaign_main
+    margin-top 60px
